[package]
name = "pebbles-game-gear-academy"
version = "0.1.0"
edition = "2021"
gtest = "1.1.0"

[dependencies]
pebbles-game-io = { path = "io" }
gstd = "1.1.0"
gmeta = "1.1.0"
parity-scale-codec = { version = "3", default-features = false }
scale-info = { version = "2", default-features = false }

[build-dependencies]
gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git", tag = "v1.0.2" }

[dev-dependencies]
gtest = { git = "https://github.com/gear-tech/gear.git", tag = "v1.0.2" }
